--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<section class="nav-bar">
+		<img src="images/menu.png">
+		<img src="images/logo.jpg">
+		<input type="text" name="search" placeholder="search">
+	</section>
+	<section class="video">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/ZnuwB35GYMY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<h1>Thomas Suarez</h1>
+		<p>12 year old  developer made 1000000 $,see he s app</p>
+		<p>300 000 views</p>
+	</section>
+	<section class="sidebar">
+		<img src="images/thumb1.jpg">
+		<img src="images/thumb2.jpg">
+		<img src="images/thumb3.jpg">
+		<img src="images/thumb4.jpg">
+	</section>
+
 </body>
 </html>
